--- a/css/all.html
+++ b/css/all.html
@@ -1,3 +1,28 @@
+<h2>Псевдоклассы</h2>
+<h3>По номеру элемента</h3>
+<h4>nth-child</h4>
+<p>Добавляет стиль к элементу номер которого входит в числовую последовательность описанную параметром псевдокласса формулой вида an+b.</p>
+<p><strong>Пример:</strong></p>
+<pre class="prettyprint lang-css">
+.my:nth-child(2n-3) {
+	color: red;
+}
+</pre>
+<p>Все нечетные элементы (номер элемента назначется сугубо в одном уровне дум - элементы имеющие одного родителя) класса .my будут окрашены в красный цвет.</p>
+<h4>nth-last-child</h4>
+<p>То же что и предыдущее только отсчет с конца.</p>
+<h4>nth-of-type</h4>
+<p>То же что и <code>nth-child</code>, но учитывается тип тега</p>
+<p><strong>Пример:</strong></p>
+<pre class="prettyprint lang-css">
+span:nth-child(2n-3) {
+	color: red;
+}
+</pre>
+<p>Посчитываться будут только span</p>
+<h4>nth-last-of-type</h4>
+<p>То же что и предыдущее, но подсчет с конца.</p>
+
 <h2>Медиа запросы</h2>
 <p>min-width: 768px === Правило применяется к браузеру, ширина которого больше значения, указанного в запросе.</p>
 <p>max-width: 1024px === Правило применяется к браузеру, ширина которого меньше значения, указанного в запросе.</p>
