--- a/php/all.html
+++ b/php/all.html
@@ -5,6 +5,30 @@ max_file_uploads = 20
 post_max_size = 210M
 </pre>
 <pre class="prettyprint lang-sh">sudo service apache2 restart</pre>
+<h3>Переменные окружения</h3>
+Если $_ENV пуст - проверить variables_order в php.ini (/etc/php5/apache2/php.ini) (Должно быть E в строке)
+<pre>;variables_order = "GPCS"
+variables_order = "EGPCS"</pre>
+<p>
+        Sets the order of the EGPCS (<em>E</em>nvironment,
+        <em>G</em>et, <em>P</em>ost,
+        <em>C</em>ookie, and <em>S</em>erver) variable
+        parsing. For example, if variables_order
+        is set to <em>"SP"</em> then PHP will create the
+        <a href="language.variables.predefined.php">superglobals</a> <var><var><a href="reserved.variables.server.php">$_SERVER</a></var></var> and
+        <var><var><a href="reserved.variables.post.php">$_POST</a></var></var>, but not create
+        <var><var><a href="reserved.variables.environment.php">$_ENV</a></var></var>, <var><var><a href="reserved.variables.get.php">$_GET</a></var></var>, and
+        <var><var><a href="reserved.variables.cookies.php">$_COOKIE</a></var></var>.  Setting to "" means no
+        <a href="language.variables.predefined.php">superglobals</a> will be set.
+</p>
+<h4>Через apache (модуль mod_env)</h4>
+<p><a href="http://httpd.apache.org/docs/current/mod/mod_env.html">http://httpd.apache.org/docs/current/mod/mod_env.html</a></p>
+<p>Передать переменную окружения из shell (Passes environment variables from the shell)</p>
+<pre>PassEnv LD_LIBRARY_PATH
+</pre>
+<p>Установить переменную окружения (Sets environment variables)</p>
+<pre>SetEnv SPECIAL_PATH /foo/bin
+</pre>
 <h2>Функции</h2>
 <h3>iconv - изменение кодировки строки</h3>
 <pre class="prettyprint lang-php">
