--- a/sql/all.html
+++ b/sql/all.html
@@ -84,6 +84,12 @@ UPDATE [LOW_PRIORITY] [IGNORE] tbl_name [, tbl_name ...]
 <h3>TRUNCATE</h3>
 <p>— удаляет и воссоздает таблицу, операция является нетранзакционной, не возвращает количество удаленных строк.</p>
 <pre>TRUNCATE TABLE table_name</pre>
+<h3>DROP TABLE</h3>
+<pre>
+DROP TABLE `ct_tree_rel`;
+-- 
+DROP TABLE IF EXISTS `ct_tree_rel`;
+</pre>
 <h3>COALESCE</h3>
 <p>Возвращает первый в списке элемент со значением, не равным NULL: <code>SELECT COALESCE(NULL,2,NULL,1) -> 2;</code></p>
 <h3>LAST_INSERT_ID()</h3>
