--- a/html/all.html
+++ b/html/all.html
@@ -16,11 +16,22 @@
 			<td>U+00A4</td>
 			<td>&amp;#164;</dt>
 		</tr>
+        <tr>
+            <td><span class="lead">&#8381;</span></td>
+            <td>Знак рубля</td>
+            <td>U+20BD</td>
+            <td>&amp;#8381;</dt>
+        </tr>
 		<tr>
-			<td><span class="lead">&#8381;</span></td>
-			<td>Знак рубля</td>
-			<td>U+20BD</td>
-			<td>&amp;#8381;</dt>
+			<td><span class="lead">&#8222;&#8220;</span></td>
+			<td>Кавычки русские Лапки</td>
+			<td></td>
+			<td>
+                <p>Десятичный код:</p>
+                <pre>&amp;#8222;&amp;#8220;</pre>
+                <p>Мнемоника:</p>
+                <pre>&amp;bdquo;&amp;ldquo;</pre>
+            </dt>
 		</tr>
 	</tbody>
 </table>
