--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -208,6 +208,10 @@
             &quot;trigger&quot;: &quot;utf8-kavichki-lapki&quot;
         },
         {
+            &quot;contents&quot;: &quot;&amp;#8222;&amp;#8220;&quot;,
+            &quot;trigger&quot;: &quot;utf8-kavichki-lapki-html-code&quot;
+        },
+        {
             &quot;contents&quot;: &quot;←↑→↓&quot;,
             &quot;trigger&quot;: &quot;utf8-strelki&quot;
         },
