--- a/apache/all.html
+++ b/apache/all.html
@@ -16,6 +16,9 @@ sudo apt-get install apache2</pre>
 <h3>install php5 mysql</h3>
 <p>Теперь приконнектим к новоиспеченному апачу php5, вместе с библиотеками для работы с MySQL и графикой:</p>
 <pre>sudo apt-get install php5 libapache2-mod-php5 libapache2-mod-auth-mysql php5-mysql php5-cli imagemagick mysql-server php5-gd php5-imagick</pre>
+<p>Кстати, еще модуль <mark>php5-mysqlnd</mark> вместо <mark>php5-mysql</mark> для поддержки типа данных integer извлекаемых данных (с помощью PDO библиотеки PHP)</p>
+<pre class="prettyprint lang-sh">sudo apt-get install php5-mysqlnd
+sudo service apache2 restart</pre>
 
 <p>Старт/Стоп/Перезапуск сервера Apache под Linux в терминале</p>
 <pre>/etc/init.d/apache2 {restart}{stop}{start}</pre>
