--- a/seo/all.html
+++ b/seo/all.html
@@ -1,16 +1,27 @@
-
-
 <h2>Внутренняя оптимизация</h2>
 <h3>Title, Description, Keywords</h3>
-
+<h3>Редирект</h3>
+<p>файл .htaccess</p>
+<p>Отдельно одну страницу домена флаг-шток.рф на другой домен</p>
+<pre>RewriteCond %{HTTP_HOST} ^www\.xn----7sbj3abv1al4b\.xn--p1ai$ [NC,OR]
+RewriteCond %{HTTP_HOST} ^xn----7sbj3abv1al4b\.xn--p1ai$ [NC]
+RewriteCond %{REQUEST_URI} ^/test24/$ [NC]
+RewriteRule ^ http://www.flag-mast.ru/support/ [R=301,L]</pre>
+<p>либо страницы скопом (обратить внимание на то что регулярное выражение REQUEST_URI различно в RewriteCond и RewriteRule - в RewriteRule без начального "/"!!!)</p>
+<pre>RewriteCond %{HTTP_HOST} ^www\.xn----7sbj3abv1al4b\.xn--p1ai$ [NC,OR]
+RewriteCond %{HTTP_HOST} ^xn----7sbj3abv1al4b\.xn--p1ai$ [NC]
+# RewriteCond %{REQUEST_URI} ^/production/$ [NC]
+RewriteRule ^production3/$ http://www.flag-mast.ru/production3/ [R=301,L]
+RewriteRule ^production4/$ http://www.flag-mast.ru/production4/ [R=301,L]
+RewriteRule ^production5/$ http://www.flag-mast.ru/production5/ [R=301,L]
+RewriteRule ^production6/$ http://www.flag-mast.ru/production6/ [R=301,L]</pre>
 <h2>Google Adsense</h2>
 <h3>Действия для активации платежей в своем аккаунте</h3>
 <ol>
-	<li>Накопить 10$;</li>
-	<li>Сделать запрос на отправку PIN-кода на почтовый адрес;</li>
-	<li>Ввести пинкод;</li>
-	<li>Настроить вывод на счет банка (счет должен быть в $, легко - через онлайн банк);</li>
-	<li>Накопить 100$;</li>
-	<li>...</li>
+    <li>Накопить 10$;</li>
+    <li>Сделать запрос на отправку PIN-кода на почтовый адрес;</li>
+    <li>Ввести пинкод;</li>
+    <li>Настроить вывод на счет банка (счет должен быть в $, легко - через онлайн банк);</li>
+    <li>Накопить 100$;</li>
+    <li>...</li>
 </ol>
-
