--- a/bash/all.html
+++ b/bash/all.html
@@ -63,6 +63,25 @@
 <p><code>cat &gt;&gt; filename</code> — открывает файл для записи в конец файла.</p>
 
 
+<h3>touch</h3>
+<p>Для установки времени последнего изменения файла или доступа в текущее время. Также используется для создания пустых файлов.</p>
+<ul>
+<li><code>-a</code> - устанавливает время последнего доступа к файлу. Время последнего изменения не устанавливается, если явно не задан ключ -m</li>
+<li><code>-c</code> - указывает утилите не создавать файл, если он не существует, при этом никаких сообщений об ошибке показано не будет.</li>
+<li><code>-f</code> - пытается обновить информацию о времени, даже если права доступа файла не позволяют делать.</li>
+<li><code>-h</code> - указывает утилите не изменять данные о файле, если он задан символической ссылкой.</li>
+<li><code>-m</code> - устанавливает время последнего изменения файла.</li>
+<li><code>-r file</code> - использовать значения времени из файла, заданного аргументом file.</li>
+<li><code>-t time</code> - устанавливает время последнего изменения и доступа в соответствии с указанным форматом time.</li>
+</ul>
+<p>Создает файл myfile.txt и устанавливает время последнего изменения и доступа в текущее время в системе; если файл существует — обновляет время последнего изменения и доступа не изменяя при этом содержимого файла:</p>
+<pre># touch myfile.txt</pre>
+<p>Устанавливает дату последнего изменения и доступа в 8:46:26 31 января 2007 г.:</p>
+<pre>
+# touch -t 200701310846.26 index.html
+# touch -d '2007-01-31 8:46:26' index.html
+# touch -d 'Jan 31 2007 8:46:26' index.html
+</pre>
 
 
 <h3>less</h3>
