--- a/linux/all.html
+++ b/linux/all.html
@@ -1,5 +1,51 @@
 synaptic - менеджер пакетов
 
+
+
+форматирование флешки
+проверим наличие нашего Flash-накопителя:
+
+# fdisk -l
+Выведет информацию о всех подключённых накопителях и их разделах. Обычно sda — это диск на котором установлена ОС, значит нас интересуют sdb, sdc и т.д. Зная объем своей флешки, в моем случае 4gb, я увидел следующее:
+
+Disk /dev/sdb: 3,8 GiB, 4055885824 bytes, 1980413 sectors
+Units: sectors of 1 * 2048 = 2048 bytes
+Sector size (logical/physical): 2048 bytes / 2048 bytes
+I/O size (minimum/optimal): 2048 bytes / 2048 bytes
+Disklabel type: dos
+Disk identifier: 0x6f20736b
+Устр-во    Загрузочный Start Конец    Blocks   Id  System
+/dev/sdb1  *           512   1980412  3959802  7   HPFS/NTFS/exFAT
+/dev/sdb1 - это и есть та самая флешка с которой будем работать.
+
+Нужно проверить примонтирована ли флешка, сделать это можно командой df -h:
+
+# df -h /dev/sdb1
+Сама по себе, команда df -h, выводит весь список примонтированных устройств.
+
+Если флешка примонтирована, нужно отмонтировать:
+
+# umount /dev/sdb1
+Теперь можно форматировать, форматировать будем в ntfs командой mkfs:
+
+# mkfs.ntfs -L name /dev/sdb1
+mkfs — комада для форматирования.
+ntfs — файловая система.
+-L — аргумент, позволяющий присвоить имя нашей флешки (недоступен для fat32).
+name — имя (метка) нашей флешки.
+/dev/sdb1 — путь к флешки.
+Команды для форматирования в другие файловые системы предназначенные для Flash-накопителей:
+
+mkfs.ntfs - NTFS
+mkfs.msdos - MSDOS
+mkfs.vfat - VFAT (расширенная FAT32)
+
+
+
+
+
+
+
 <h2>Console</h2>
 <h3>show</h3>
 <p><code>export PS1='$(whoami)@$(hostname):$(pwd)$ '</code></p>
