--- a/linux-mint/all.html
+++ b/linux-mint/all.html
@@ -1,3 +1,23 @@
+>>> import paramiko
+>>> print paramiko.__version__
+1.12.0
+
+python get-pip.py --proxy="10.192.0.3:3128"
+pip --proxy proxy.newstar.ru:3128 install --upgrade paramiko==1.15.2
+
+which pip
+/usr/local/bin/pip uninstall pip  
+apt-get remove python-pip  
+apt-get install python-pip
+
+pip --proxy proxy.newstar.ru:3128 install --upgrade pip
+
+/usr/local/bin/pip --proxy proxy.newstar.ru:3128 install --upgrade paramiko==1.15.2
+
+
+
+
+
 <p>
     <a href="http://bashrcgenerator.com/">http://bashrcgenerator.com/</a>
 </p>
